--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.2",
+    "swiper": "^12.0.2",
     "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
   },
